--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "GoodJob",
   "version": "0.0.1",
-  "description": "",
+  "description": "Final project in course DH2642 at KTH",
   "main": "index.js",
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
     "start": "http-server app/ -a 0.0.0.0 -p 8000"
   },
@@ -22,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/duff92/GoodJob/issues"
   },
-  "homepage": "https://github.com/duff92/GoodJob"
+  "homepage": "https://github.com/duff92/GoodJob",
+  "dependencies": {
+    "angularfire": "^1.0.0",
+    "firebase": "^2.2.2"
+  }
 }
