Added functionallity and functionlist
Added this functionallity to GoodJobProvider:
- getApplicationLogo (Not fully implemented): Get logo of application,
haven't tried out fully yet
- analyzeApplicationText: Get keywords from text, could be used for the
applicationtext later on

Also started working on a functionlist presented in the goodJobService
with comments

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/duff92/GoodJob",
   "dependencies": {
+    "alchemy-api": "^1.1.1",
     "angularfire": "^1.0.0",
     "firebase": "^2.2.2"
   }
