--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,8 @@
     "angular-route": "1.3.x",
     "angular-resource": "1.3.x",
     "angular-animate": "1.3.x",
-    "angular-cookies":"1.3.x"
+    "angular-cookies": "1.3.x",
+    "angularfire": "~1.0.0",
+    "firebase": "~2.2.3"
   }
 }
