--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-animate": "1.3.x",
     "angular-cookies": "1.3.x",
     "angularfire": "~1.0.0",
-    "firebase": "~2.2.3"
+    "firebase": "~2.2.3",
+    "components-font-awesome": "~4.3.0"
   }
 }
