--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "angular-cookies": "1.3.x",
     "angularfire": "~1.0.0",
     "firebase": "~2.2.3",
-    "components-font-awesome": "~4.3.0"
+    "components-font-awesome": "~4.3.0",
+    "angular-chart.js": "~0.5.3"
   }
 }
