--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angularfire": "~1.0.0",
     "firebase": "~2.2.3",
     "components-font-awesome": "~4.3.0",
-    "angular-chart.js": "~0.5.3"
+    "angular-chart.js": "~0.5.3",
+    "mobile-angular-ui": "~1.2.0-beta.11"
   }
 }
